Bug 435692 - Overlapping text after changing subtitles in preview zone
Summary: Overlapping text after changing subtitles in preview zone
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Rendering & Export (other bugs)
Version First Reported In: 20.12.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-13 13:47 UTC by Lukas Himbert
Modified: 2021-05-10 16:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Himbert 2021-04-13 13:47:26 UTC
SUMMARY
Changing a subtitle in a preview zone after Preview Render has completed leads to the original and changed subtitle texts overlapping.

STEPS TO REPRODUCE
1. Create a new project.
2. Add a preview zone.
3. Within the preview zone, add a subtitle, for example "original text".
4. Start Preview Render, wait until it is done.
5. Change the subtitle, for example to "new text".
6. Play the video in the Project Monitor.

OBSERVED RESULT
Both subtitles are shown in the project monitor.
In the example, both "original text" and "new text" are shown, one overlapping the other.

EXPECTED RESULT
Only the changed subtitle text is shown.

SOFTWARE/OS VERSIONS
OS: Linux (x86_64) release 5.11.13-arch1-1
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2 (built against 5.15.2)

ADDITIONAL INFORMATION
- On changing the subtitle, the Preview Zone is not invalidated (i.e. does not change from green to red).
- Re-starting the Preview Render after step 5 does not change anything.
Workaround: Remove the preview zone, add it again, and rerender.
Comment 1 Julius Künzel 2021-04-20 15:05:58 UTC
Thanks for your report! I can confirm this behavior.
Comment 2 Julius Künzel 2021-05-10 16:16:18 UTC
Git commit 3ed0dbf11a251e19a74d717ae1161594e395d61d by Julius Künzel.
Committed on 10/05/2021 at 16:11.
Pushed by jlskuz into branch 'release/21.04'.

Invalidate preview render on subtitle actions

Related to #973

M  +37   -14   src/bin/model/subtitlemodel.cpp
M  +12   -4    src/timeline2/view/timelinecontroller.cpp

https://invent.kde.org/multimedia/kdenlive/commit/3ed0dbf11a251e19a74d717ae1161594e395d61d