Invalidate preview render on subtitle actions

BUG: 435692

Related to #973